--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -35,7 +35,7 @@
                         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Gending Hotel"
+                        android:text="Customer Activities"
                         android:textColor="@color/white" />
 
                 </LinearLayout>
