--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -76,9 +76,22 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/TextView20"
+                    android:layout_width="396dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingBottom="15dp"
+                    android:text="Please enter your registered email address. We will email you the reset password link."
+                    android:textAlignment="textStart"
+                    android:textSize="15sp" />
+
+                <TextView
                     android:id="@+id/TextView8"
                     android:layout_width="411dp"
-                    android:layout_height="0dp"
+                    android:layout_height="70dp"
                     android:layout_weight="1"
                     android:paddingLeft="15dp"
                     android:paddingTop="15dp"
@@ -89,12 +102,12 @@
                     android:textSize="18sp" />
 
                 <EditText
-                    android:id="@+id/txtOrderNo"
+                    android:id="@+id/txtEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:autofillHints=""
                     android:ems="10"
-                    android:inputType="textLongMessage|textPersonName"
+                    android:inputType="textWebEmailAddress|textEmailAddress"
                     android:labelFor="@id/TextView8"
                     android:paddingLeft="15dp"
                     android:paddingTop="15dp"
@@ -106,57 +119,57 @@
                     android:textIsSelectable="false"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingBottom="15dp"
-                    android:text="New Password"
-                    android:textSize="18sp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/textView4"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:paddingLeft="15dp"-->
+<!--                    android:paddingTop="15dp"-->
+<!--                    android:paddingRight="15dp"-->
+<!--                    android:paddingBottom="15dp"-->
+<!--                    android:text="New Password"-->
+<!--                    android:textSize="18sp" />-->
 
-                <EditText
-                    android:id="@+id/txtPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:inputType="textShortMessage|textPersonName|text|textPassword"
-                    android:labelFor="@id/textView4"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingBottom="15dp"
-                    android:text=""
-                    android:textColor="#939191" />
+<!--                <EditText-->
+<!--                    android:id="@+id/txtPassword"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:autofillHints=""-->
+<!--                    android:ems="10"-->
+<!--                    android:inputType="textShortMessage|textPersonName|text|textPassword"-->
+<!--                    android:labelFor="@id/textView4"-->
+<!--                    android:paddingLeft="15dp"-->
+<!--                    android:paddingTop="15dp"-->
+<!--                    android:paddingRight="15dp"-->
+<!--                    android:paddingBottom="15dp"-->
+<!--                    android:text=""-->
+<!--                    android:textColor="#939191" />-->
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingBottom="15dp"
-                    android:text="Retype New Password"
-                    android:textSize="18sp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/textView5"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:paddingLeft="15dp"-->
+<!--                    android:paddingTop="15dp"-->
+<!--                    android:paddingRight="15dp"-->
+<!--                    android:paddingBottom="15dp"-->
+<!--                    android:text="Retype New Password"-->
+<!--                    android:textSize="18sp" />-->
 
-                <EditText
-                    android:id="@+id/ResetPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:inputType="textShortMessage|textPersonName|text|textPassword"
-                    android:labelFor="@id/textView4"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingBottom="15dp"
-                    android:text=""
-                    android:textColor="#939191" />
+<!--                <EditText-->
+<!--                    android:id="@+id/ResetPassword"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:autofillHints=""-->
+<!--                    android:ems="10"-->
+<!--                    android:inputType="textShortMessage|textPersonName|text|textPassword"-->
+<!--                    android:labelFor="@id/textView4"-->
+<!--                    android:paddingLeft="15dp"-->
+<!--                    android:paddingTop="15dp"-->
+<!--                    android:paddingRight="15dp"-->
+<!--                    android:paddingBottom="15dp"-->
+<!--                    android:text=""-->
+<!--                    android:textColor="#939191" />-->
 
             </LinearLayout>
 
