--- a/app/src/main/res/layout/activity_date_selection.xml
+++ b/app/src/main/res/layout/activity_date_selection.xml
@@ -72,12 +72,13 @@
                         android:text="Check In Date"
                         android:textSize="15sp" />
 
-                    <Spinner
-                        android:id="@+id/ddlRoomType"
-                        android:layout_width="350dp"
-                        android:layout_height="wrap_content"
-                        android:background="@android:drawable/btn_dropdown"
-                        android:spinnerMode="dropdown" />
+                    <DatePicker
+                        android:id="@+id/dpCheckInDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:calendarViewShown="false"
+                        android:datePickerMode="spinner"
+                        android:paddingLeft="20dp" />
 
                     <TextView
                         android:id="@+id/textView9"
@@ -90,12 +91,13 @@
                         android:text="Check Out Date"
                         android:textSize="15sp" />
 
-                    <Spinner
-                        android:id="@+id/ddlTimeRange"
-                        android:layout_width="350dp"
-                        android:layout_height="wrap_content"
-                        android:background="@android:drawable/btn_dropdown"
-                        android:spinnerMode="dropdown" />
+                    <DatePicker
+                        android:id="@+id/dpCheckOutDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:calendarViewShown="false"
+                        android:datePickerMode="spinner"
+                        android:paddingLeft="20dp" />
 
                     <TextView
                         android:id="@+id/textView10"
