--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:orientation="vertical"
@@ -36,7 +36,7 @@
                         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Order Confirmation"
+                        android:text="Payment"
                         android:textColor="@color/white" />
 
                 </LinearLayout>
@@ -57,7 +57,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="475dp">
+                    android:layout_height="374dp">
 
                     <TextView
                         android:id="@+id/txtBookingID"
@@ -119,49 +119,16 @@
                         app:layout_constraintTop_toBottomOf="@+id/txtCustName"
                         tools:text="Total Amount" />
 
-                    <RadioGroup
+                    <Spinner
                         android:id="@+id/paymentMethod"
-                        android:layout_width="380dp"
-                        android:layout_height="180dp"
-                        android:layout_marginLeft="30dp"
+                        android:layout_width="320dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtToTal">
-
-                        <RadioButton
-                            android:id="@+id/CreditCard"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Paid By Credit Card"
-                            android:textSize="18sp" />
-
-                        <RadioButton
-                            android:id="@+id/Cash"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Paid By Cash"
-                            android:textSize="18sp" />
-
-                        <RadioButton
-                            android:id="@+id/TouchNGo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="15dp"
-                            android:paddingTop="15dp"
-                            android:paddingRight="15dp"
-                            android:paddingBottom="15dp"
-                            android:text="Paid By Touch N Go"
-                            android:textSize="18sp" />
-
-                    </RadioGroup>
+                        app:layout_constraintTop_toBottomOf="@+id/txtToTal" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
