--- a/app/src/main/res/layout/activity_check_in_form.xml
+++ b/app/src/main/res/layout/activity_check_in_form.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <LinearLayout
         android:orientation="vertical"
@@ -168,6 +168,8 @@
                         android:textColorHighlight="#6DFFFFFF"
                         android:textIsSelectable="false"
                         android:textSize="15sp" />
+
+
 
                 </LinearLayout>
 
